# bb-cli

./: .gitignore  AGENTS.md  LICENSE  Makefile  PLAN.md  README.MD  README.ko-kr.MD  TASKS.md
.agents/skills/bitbucket-cli-command-standards/: SKILL.md
.agents/skills/bitbucket-cli-command-standards/agents/: openai.yaml
.agents/skills/bitbucket-cli-command-standards/references/: command-contract-template.md
.agents/skills/bitbucket-cloud-api-playbook/: SKILL.md
.agents/skills/bitbucket-cloud-api-playbook/agents/: openai.yaml
.agents/skills/bitbucket-cloud-api-playbook/references/: endpoints.md  error-contract.md
.agents/skills/multi-agent-plan-task-workflow/: SKILL.md
.agents/skills/multi-agent-plan-task-workflow/agents/: openai.yaml
.agents/skills/multi-agent-plan-task-workflow/references/: task-line-format.md
.context/: STEERING.md  TASKS.md
.github/workflows/: ci.yml  release-build.yml
docs/: SPEC.md  command-contracts.md  references.md  spec.md
internal/app/: app.go  app_test.go  help.go  pr.go  pr_test.go
rust/: Cargo.toml
rust/bb-cli/: Cargo.toml
rust/bb-cli/src/: cli.rs  main.rs
rust/bb-cli/tests/: cli_smoke.rs
rust/bb-core/: Cargo.toml
rust/bb-core/src/: client.rs  config.rs  context.rs  error.rs  lib.rs  render.rs  runtime.rs  version.rs
skills/bb-cli/: SKILL.md
