[workspace]
members = ["bb-cli", "bb-core"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.1"

[workspace.dependencies]
clap = { version = "4.5.32", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
time = { version = "0.3.39", features = ["formatting", "parsing"] }
unicode-width = "0.2.0"

[workspace.dependencies.assert_cmd]
version = "2.0.17"

[workspace.dependencies.tempfile]
version = "3.19.1"

[workspace.dependencies.httpmock]
version = "0.7.0"
