[package]
name = "bb-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
unicode-width.workspace = true

[dev-dependencies]
httpmock.workspace = true
